# fly

./: .coverage  .coveragerc  .editorconfig  .gitattreibutes  .gitattributes  .gitignore  .h  .server.c.swp  .server.h.swp  2  CHANGELOG.md  Dockerfile  GPATH  GRTAGS  GTAGS  LICENSE  MANIFEST.in  Makefile  Makefile.in  README  README.md  TODO  __fly.conf  __makefile  _makefile  aclocal.m4  aio.c  aio.h  alloc.c  alloc.h  api.c  api.h  body.c  body.h  buffer.c  buffer.h  buft.c  cache.c  cache.h  char.h  (+91 more)
.github/workflows/: fly-test.yaml  freebsd-py310.yaml  freebsd-py36.yaml  freebsd-py37.yaml  freebsd-py38.yaml  freebsd-py39.yaml  freebsd.yaml  linux-py310.yaml  linux-py36.yaml  linux-py37.yaml  linux-py38.yaml  linux-py39.yaml  linux.yaml  macos-py310.yaml  macos-py36.yaml  macos-py37.yaml  macos-py38.yaml  macos-py39.yaml  macos.yaml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.6  traces.7
bench/: README.md  bench.conf  bench.py  locust.py  server.crt  server.key
bench/html/: bench.html
fly/: __init__.py  __init__.py.in  __main__.py  _base.py  _parse.py  app.py  cookie.py  cors.py  env.py  err.py  fly.py  fs.py  helper.py  main.py  method.py  mount.py  response.py  route.py  signal.py  status.py  template.py  types.py
fly/fly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fly/lib/: libfly.la  libfly.so.1  libfly.so.1.0.0
home/tatsuya/fly/lib/: libfly.so.0.0.0
src/: .c  .h  Makefile  Makefile.am  Makefile.in  alloc.c  alloc.h  bllist.c  bllist.h  body.c  body.h  buffer  buffer.c  buffer.h  cache.c  cache.h  char.h  charset.c  charset.h  conf.c  conf.h  config.c  connect.c  connect.h  context.c  context.h  encode.c  encode.h  err.c  err.h  event.c  event.h  fc  fsignal.c  fsignal.h  ftime.c  ftime.h  header.c  header.h  lang.c  (+84 more)
src/.deps/: libfly_la-alloc.Plo  libfly_la-bllist.Plo  libfly_la-body.Plo  libfly_la-buffer.Plo  libfly_la-cache.Plo  libfly_la-charset.Plo  libfly_la-conf.Plo  libfly_la-connect.Plo  libfly_la-context.Plo  libfly_la-encode.Plo  libfly_la-err.Plo  libfly_la-event.Plo  libfly_la-fsignal.Plo  libfly_la-ftime.Plo  libfly_la-header.Plo  libfly_la-lang.Plo  libfly_la-log.Plo  libfly_la-master.Plo  libfly_la-math.Plo  libfly_la-method.Plo  libfly_la-mime.Plo  libfly_la-mount.Plo  libfly_la-queue.Plo  libfly_la-rbtree.Plo  libfly_la-request.Plo  libfly_la-response.Plo  libfly_la-route.Plo  libfly_la-scheme.Plo  libfly_la-server.Plo  libfly_la-ssl.Plo  libfly_la-uri.Plo  libfly_la-util.Plo  libfly_la-v2.Plo  libfly_la-version.Plo  libfly_la-worker.Plo
src/.libs/: libfly.la  libfly.lai
static/: 400.html  404.html  405.html
test/: GPATH  GRTAGS  GTAGS  __fly_test_charset.c  __fly_test_err.c  __fly_test_event.c  __fly_test_lang.c  __fly_test_log.cpp  __fly_test_master.c  __fly_test_master_worker.c  __fly_test_mime.c  __fly_test_socket.c  __fly_test_worker.c  __fly_test_worker_mod.c  __fly_test_worker_ssl.c  fly_test  test.conf  test_api.cpp  test_body.cpp  test_cache.c  test_charset.c  test_ctx.c  test_err.c  test_event.c  test_fly.cpp  test_fly.py  test_fs.cpp  test_log.cpp  test_master.c  test_method.cpp  test_method.py  test_mime.c  test_request.cpp  test_res.py  test_route.cpp  test_route.py  test_run.py  test_server.cpp  test_signal.cpp  test_signal.py  (+4 more)
test/pyfly/: run.py  test_env.py  test_fly.py  test_fs.py
tests/: __fly_test_worker_ssl.c  __fly_test_worker_ssl_min.c  aaa  conftest.py  create_key.sh  fly_dummy  fly_dummy2  fly_test.csr  fly_test.j2  fly_test.py  fly_test_cors.py  http_test.conf  http_test_enc.conf  http_test_mini.conf  http_test_over.conf  https_test.conf  https_test_enc.conf  https_test_mini.conf  pytest.ini  test.conf  test__main__.py  test_app.py  test_async.py  test_base.py  test_charset.c  test_client.py  test_config.c  test_connect.cpp  test_cookie.py  test_cors.py  test_daemon.py  test_encode.py  test_helper.py  test_inotify.py  test_kill.py  test_lang.c  test_log.cpp  test_main.py  test_master.c  test_master_worker.c  (+22 more)
tests/static/: 404.html
