[metadata]
url = https://github.com/tatsuya4649/fly
author = tatsuya.s
author_email = tatsuya4946developer@gmail.com
license_files = LICENSE
keywords = HTTP Web-server app-server"
long_description = file: README.md
classifiers =
	License :: OSI Approved :: MIT License
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Programming Language :: C
	Programming Language :: Python
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: HTTP Servers

[build]
build-lib=fly
build-temp=.
force=1

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extra_require]
dev =
	pytest>=6
