[metadata]
url = https://github.com/tatsuya4649/fly
author = tatsuya.s
author_email = tatsuya4946developer@gmail.com
keywords = HTTP Web-server app-server
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	License :: OSI Approved :: MIT License
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Programming Language :: C
	Programming Language :: Python
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
zip_safe = False
python_requires = >= 3.5

[options.extras_require]
test =
	pytest>=6
	httpx
dev =
	pytest>=6
	httpx
